@@ -3,6 +3,7 @@ Change log 1.4 (under development)
 * Fixed a bug in DeepCloner which caused a NullPointerException for arrays containing null values.
 * Changed groupId of the PowerMock JUnit Rule project to org.powermock.modules.
 * Included PowerMock rule in the released artifacts
+* verifyNew with arguments no longer throws NullPointerException when missing expectation in the Mockito extension API.
 
 Change log 1.3.7 (2010-03-22)
 -----------------------------
